description alignment errors fixed

--- a/css/master.css
+++ b/css/master.css
@@ -1425,6 +1425,10 @@ html {
   grid-template-rows: minmax(0.15fr 1fr);
 }
 
+.err-div {
+  padding: 1rem;
+}
+
 .postViewer-addDescription {
   background: none;
   width: 100%;
