--- a/scss/postview.scss
+++ b/scss/postview.scss
@@ -8,6 +8,10 @@
 
 }
 
+.err-div {
+  padding: 1rem;
+}
+
 .postViewer-addDescription {
   background: none;
   width: 100%;
